<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="20dp"
            android:text="@string/orange_textview"
            android:textAlignment="center" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:padding="20dp"
            android:text="@string/green_textview"
            android:textAlignment="center" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:padding="20dp"
            android:text="@string/blue_textview"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="25dp"
            android:text="@string/this_is_a_button">

        </Button>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:src="@drawable/thesun">

        </ImageView>

        <Button
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:text="@string/this_is_a_green_button">

        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/this_is_an_edittext"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/this_is_a_new_edittext"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/holo_blue_bright">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/notify_me"></CheckBox>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/auto_backup"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textStyle="bold"></TextView>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"></Switch>

            </LinearLayout>

            <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="4"
            android:stepSize="1"></RatingBar>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textAllCaps="true">

            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textAllCaps="true">

            </RadioButton>
        </RadioGroup>
    </LinearLayout>
</LinearLayout>